clusters/9ka/downloaders/transmission/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: bittorrent
    app.kubernetes.io/part-of: downloaders
spec:
  serviceName: transmission
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
      app.kubernetes.io/component: bittorrent
      app.kubernetes.io/part-of: downloaders
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
        app.kubernetes.io/component: bittorrent
        app.kubernetes.io/part-of: downloaders
    spec:
      securityContext:
        # runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: transmission
        image: ghcr.io/linuxserver/transmission:4.1.3
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        - name: bittorrent
          containerPort: 51413
          protocol: TCP
        startupProbe:
          tcpSocket:
            port: http
          periodSeconds: 1
          failureThreshold: 30
        livenessProbe:
          tcpSocket:
            port: http
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: http
          periodSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - mountPath: /downloads/complete
          name: complete
        - mountPath: /downloads/incomplete
          name: incomplete
        - mountPath: /config
          name: config
        # - mountPath: /run
        #   name: run
        resources:
          limits:
            cpu: "1"
            memory: 768Mi
          requests:
            cpu: 100m
            memory: 16Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
            - ALL
            add:
            - CHOWN
            - SETUID
            - SETGID
            - FOWNER
            - DAC_OVERRIDE
            - NET_BIND_SERVICE
          # readOnlyRootFilesystem: true
          # runAsUser: 1000
          # runAsGroup: 1000
          # runAsNonRoot: true
      volumes:
      - name: complete
        nfs:
          server: helium.svc.efgh.nl
          path: /rusty/data/downloads/complete
      - name: incomplete
        nfs:
          server: helium.svc.efgh.nl
          path: /rusty/data/downloads/incomplete
      # - name: run
      #   emptyDir:
      #     sizeLimit: 1Gi
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ ReadWriteOnce ]
      storageClassName: proxmox-zfs-nvme
      resources:
        requests:
          storage: 1Gi
