clusters/9ka/downloaders/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: bittorrent
    app.kubernetes.io/part-of: downloaders
spec:
  selector:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: bittorrent
    app.kubernetes.io/part-of: downloaders
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: bittorrent
      protocol: TCP
      port: 10234
      targetPort: bittorrent
